<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.axxx.easysoa</groupId>
  <artifactId>axxx-easysoa-model</artifactId>
  <packaging>jar</packaging>
  <name>AXXX EasySOA model</name>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- axxx-easysoa-model.version>1.0-SNAPSHOT</axxx-easysoa-model.version -->
    
    <!-- EasySOA code discovery & conf -->
    <!-- version : TODO define in root ?? -->
    <easysoa.version>1.0-SNAPSHOT</easysoa.version>
    <!-- nuxeo.version>5.7-I20130111_0115</nuxeo.version -->
    <!-- nuxeo.version>5.7-I20130610_0116</nuxeo.version -->
    <nuxeo.version>5.7-I20130610_0116</nuxeo.version>
    
    <!-- easysoa.discovery.code.nuxeoSitesUrl>http://localhost:8080/nuxeo/site</easysoa.discovery.code.nuxeoSitesUrl --><!-- for local tests -->
    <easysoa.discovery.code.nuxeoSitesUrl>http://vmregistry:8080/nuxeo/site</easysoa.discovery.code.nuxeoSitesUrl>
    <easysoa.discovery.code.username>Administrator</easysoa.discovery.code.username>
    <easysoa.discovery.code.password>Administrator</easysoa.discovery.code.password>
    <easysoa.discovery.code.application>AXXX DPS APV</easysoa.discovery.code.application>
  </properties>

  <scm>
    <connection>scm:git:git://github.com/easysoa/EasySOA-Incubation.git</connection>
    <url>scm:git:https://github.com/easysoa/EasySOA-Incubation.git</url>
  </scm>
   
  <dependencies>
  
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.10</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>org.easysoa.registry</groupId>
      <artifactId>easysoa-registry-rest-client</artifactId>
      <version>${easysoa.version}</version>
    </dependency>
    <dependency>
      <groupId>org.nuxeo.ecm.automation</groupId>
      <artifactId>nuxeo-automation-client</artifactId>
      <version>${nuxeo.version}</version>
    </dependency>
    <!-- NB. this also gets jersey & jackson -->
    <!-- EasySOA tests -->
    <!-- dependency>
      <groupId>org.easysoa.discovery</groupId>
      <artifactId>easysoa-discovery-rest-mock</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>test</scope>
    </dependency -->
	    
  </dependencies>

  <build>
    <plugins>
      <!-- Compile with Java 1.6 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings 
          only. It has no influence on the Maven build itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.easysoa.discovery.code</groupId>
                    <artifactId>easysoa-discovery-code-mavenplugin</artifactId>
                    <versionRange>[0.9-SNAPSHOT,)</versionRange>
                    <goals>
                      <goal>discover</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  
  
  <profiles>

    <!--
    EasySOA profile.
    Enabled by default, to disable it add -DskipEasySOA to the mvn command line.
    (doesn't even require a runnning EasySOA Registry, only its plugins to be in the maven repository)
    Useful typically in CI. Allows :
    * to discover services in source code and report them to EasySOA Registry if there
    -->
    <profile>
      <id>EasySOA</id>
	  <activation>
	    <property>
	      <name>!skipEasySOA</name>
	    </property>
	  </activation>
	  <dependencies>
	    <!-- EasySOA Code discovery -->
	  </dependencies>
      <build>
        <plugins>
          
	      <!-- EasySOA Code discovery plugin -->
	      <plugin>
	        <groupId>org.easysoa.discovery.code</groupId>
	        <artifactId>easysoa-discovery-code-mavenplugin</artifactId>
	        <version>1.0-SNAPSHOT</version>
	        <executions>
	          <execution>
	            <id>test</id>
	            <phase>compile</phase>
	            <goals>
	              <goal>discover</goal>
	            </goals>
	            <configuration>
	              <nuxeoSitesUrl>${easysoa.discovery.code.nuxeoSitesUrl}</nuxeoSitesUrl>
	              <username>${easysoa.discovery.code.username}</username>
	              <password>${easysoa.discovery.code.password}</password>
	              <application>${easysoa.discovery.code.application}</application>
	            </configuration>
	          </execution>
	        </executions>
	      </plugin>
	      <!-- buildnumber plugin, required by EasySOA Code discovery plugin -->
	      <plugin>
	        <groupId>org.codehaus.mojo</groupId>
	        <artifactId>buildnumber-maven-plugin</artifactId>
	        <version>1.1</version>
	        <executions>
	          <execution>
	            <phase>validate</phase>
	            <goals>
	              <goal>create</goal>
	            </goals>
	          </execution>
	        </executions>
	        <configuration>
	          <doCheck>false</doCheck><!-- Warn: should be true (checks unstaged files) for real projects -->
	          <doUpdate>false</doUpdate>
	          <revisionOnScmFailure>0</revisionOnScmFailure>
	        </configuration>
	      </plugin>
	      
        </plugins>
      </build>
    </profile>
      
    <profile>
      <id>sonar</id>
      <!-- For code coverage with Sonar and cobertura
      requires a "main" build :
      -U -Dtest=false -DfailIfNoTests=false -Psonar clean install -s "/home/openwide/.m2/settings.xml.easysoa"
      and a post-build sonar action with its own build :
      -Psonar -DargLine=""
      and enough memory :
      -Xmx512m -XX:MaxPermSize=256m
      -->
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>cobertura-maven-plugin</artifactId>
            <version>2.6</version>
          </plugin>
        </plugins>
      </build>
    </profile>
    
  </profiles>
  
  <repositories>
    <repository>
      <id>public</id>
      <url>http://maven.nuxeo.org/nexus/content/groups/public</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>public-snapshot</id>
      <url>http://maven.nuxeo.org/nexus/content/groups/public-snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <updatePolicy>always</updatePolicy>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>
